--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -115,7 +115,7 @@
             <div class="delayed-image-load" data-src="@Config.eventImageUrlPath(event.id)/{width}{pixel_ratio}.jpg" data-alt="Please upload an event image" data-class="responsive-img"></div>
         </div>
 
-        <div class="event-content__wapper u-cf">
+        <div class="event-content__container u-cf">
 
             <div class="event-content__body">
                 <div class="event__description">@Html(event.description.getOrElse(EBRichText("foobar", "foobarhtml")).cleanHtml)</div>
@@ -159,9 +159,9 @@
                                         <span class="event-content__price-amount js-event-price">@pricing.formattedPrice</span>
                                     </div>
                                     <div class="event-content__trail">
-                                        <span class="event__trail-tag js-event-price-tag">Partners/Patrons </span>
-                                        <span class="event__trail-upsell js-event-price-discount">@pricing.discountPrice</span>
-                                        <span class="event__trail-saving js-event-price-saving"> (save @pricing.savingPrice)</span>
+                                        <span class="event-content__trail-tag js-event-price-tag">Partners/Patrons </span>
+                                        <span class="event-content__trail-upsell js-event-price-discount">@pricing.discountPrice</span>
+                                        <span class="event-content__trail-saving js-event-price-saving"> (save @pricing.savingPrice)</span>
                                     </div>
                                 }
                             }
