--- a/frontend/app/views/joiner/detail/addressForm.scala.html
+++ b/frontend/app/views/joiner/detail/addressForm.scala.html
@@ -1,12 +1,15 @@
 @(userFields: model.PrivateFields, marketingChoices: model.StatusFields,
 passwordExists: Boolean)(implicit token: play.filters.csrf.CSRF.Token)
 
+@import com.gu.membership.salesforce.Tier.Friend
 @import configuration.Config
 @import helper._
 
 @main("Address details | Friend") {
 
     @fragments.tickets.ticketsFunnel(3, StepOne = "", StepTwo = "", StepThree= "Location", StepFour = "")
+
+    @fragments.joiner.signedInAs(routes.Joiner.enterDetails(Friend).url)
 
     <form action="" method="POST" id="payment-form" class="form form-primary-container js-address-form">
         @CSRF.formField
