--- a/frontend/app/views/joiner/payment/paymentForm.scala.html
+++ b/frontend/app/views/joiner/payment/paymentForm.scala.html
@@ -7,6 +7,8 @@ marketingChoices: model.StatusFields, passwordExists: Boolean)(implicit token: p
         <section class="u-cf">
             @fragments.tickets.ticketsFunnel(3, StepOne = "", StepTwo = "", StepFour = "")
 
+            @fragments.joiner.signedInAs(routes.Joiner.enterDetails(tier).url)
+
             <form action="" method="POST" id="payment-form" class="form form-primary-container js-stripe-form">
                 @CSRF.formField
                 <input type="hidden" name="tier" class="js-tier-field" value="@tier"/>
