--- a/frontend/assets/stylesheets/pages/_events.scss
+++ b/frontend/assets/stylesheets/pages/_events.scss
@@ -146,7 +146,7 @@
         background-color: $black;
 
         &:hover {
-            background-color: rgba(0, 0, 0, .65);
+            background-color: $mem-event-button-hover;
         }
     }
 
