Change join page layout

--- a/frontend/app/views/joiner/tierList.scala.html
+++ b/frontend/app/views/joiner/tierList.scala.html
@@ -3,7 +3,7 @@
 @import model.Benefits
 @import com.gu.membership.salesforce.Tier
 
-@main("Join", pageInfo=pageInfo) {
+@main("Join", pageInfo=pageInfo, containerPadding = false, htmlClass = "join") {
 
     <section>
 
