--- a/frontend/app/views/event/thankyou.scala.html
+++ b/frontend/app/views/event/thankyou.scala.html
@@ -52,11 +52,5 @@
         <a class="action" href="/events">See all events</a>
     </section>
 
-    <script type="text/javascript">
-        require(['js!omniture'], function () {
-            s.products = 'event;@event.id;';
-            s.events = 'order';
-        });
-    </script>
-    @fragments.analytics.googleEventPurchaseConversion()
+    @fragments.analytics.eventConversion(event)
 }
