Add social icons to joiner thankyou page

--- a/frontend/app/views/fragments/joiner/completePurchase.scala.html
+++ b/frontend/app/views/fragments/joiner/completePurchase.scala.html
@@ -15,6 +15,11 @@
     </section>
 } else {
     <section class="content__container content__container--slim">
-        <a class="action" href="/events">Get Started</a>
+        <h2 class="content__headline">Tell your friends</h2>
+        @fragments.social()
+    </section>
+    <section class="content__container content__container--slim">
+        <h2 class="content__headline">Find Guardian Live events</h2>
+        <a class="action" href="/events">Get started</a>
     </section>
 }
