changed feedback thankyou page title

--- a/frontend/app/views/info/feedbackThankyou.scala.html
+++ b/frontend/app/views/info/feedbackThankyou.scala.html
@@ -1,6 +1,6 @@
 @()
 
-@main("Feedback") {
+@main("Feedback Thankyou") {
     @fragments.layout.sectionHeader("Thank you for contacting us")
 
     <p>We really appreciate your feedback.</p>
