page title changes

--- a/frontend/app/views/joiner/thankyou/paid.scala.html
+++ b/frontend/app/views/joiner/thankyou/paid.scala.html
@@ -3,7 +3,7 @@
 @import views.support.Dates._
 @import views.support.Prices._
 
-@main("Thankyou | " + subscriptionDetails.planName, containerPadding = false) {
+@main("Change Tier Summary | " + subscriptionDetails.planName + " from Friend", containerPadding = false) {
 
     <section class="content__container content__container--slim">
         @fragments.layout.welcomeUser(firstName, userEmail)
