--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -42,7 +42,7 @@
     </div>
 }
 
-@main("Join membership", pageInfo=pageInfo) {
+@main("Join Choose Tier", pageInfo=pageInfo) {
 
     <section class="section-two-thirds">
 
