--- a/frontend/app/views/tier/downgrade/summary.scala.html
+++ b/frontend/app/views/tier/downgrade/summary.scala.html
@@ -4,7 +4,7 @@
 @import views.support.Dates._
 @import views.support.Prices._
 
-@main("Downgrade Tier Summary") {
+@main("Change Tier Summary | " + futureSubscription.planName + " from " + currentSubscription.planName) {
 
     <main role="main">
         <div class="content__container">
