--- a/frontend/app/views/tier/downgrade/confirm.scala.html
+++ b/frontend/app/views/tier/downgrade/confirm.scala.html
@@ -4,7 +4,7 @@
 @import model.Benefits
 @import helper._
 
-@main("Downgrade Tier") {
+@main("Change Tier | Friend from " + currentTier) {
 
     <section>
 
