Update social hrefs

--- a/frontend/app/views/fragments/social.scala.html
+++ b/frontend/app/views/fragments/social.scala.html
@@ -1,7 +1,10 @@
 
+@import configuration.Config
+@import play.utils.UriEncoding.encodePathSegment
+
     <ul class="social u-unstyled u-cf">
         <li class="social__item">
-            <a class="social__action" href="#">
+            <a class="social__action" href="mailto:?subject=@encodePathSegment("I've just joined Guardian Membership", "utf-8")&amp;body=@encodePathSegment("Hello\n\nI've just joined Guardian Membership.\n\nCheck it out\n" + Config.membershipUrl, "utf-8")">
                 <span class="u-h">Share via Email</span>
                 <span class="social-icon">
                     <i class="icon-sprite icon-sprite-share-email"></i>
@@ -9,7 +12,7 @@
             </a>
         </li>
         <li class="social__item">
-            <a class="social__action" href="#">
+            <a class="social__action" href="https://www.facebook.com/sharer/sharer.php?u=@encodePathSegment(Config.membershipUrl, "utf-8")">
                 <span class="u-h">Share on Facebook</span>
                 <span class="social-icon">
                     <i class="icon-sprite icon-sprite-share-facebook"></i>
@@ -17,19 +20,11 @@
             </a>
         </li>
         <li class="social__item">
-            <a class="social__action" href="#">
+            <a class="social__action" href="https://twitter.com/intent/tweet?text=@encodePathSegment("I'm the newest Guardian member " + Config.membershipUrl + "/about @gdnmembership", "utf-8");hashtags=guardianmembership;related=gdnmembership">
                 <span class="u-h">Share on Twitter</span>
                 <span class="social-icon">
                     <i class="icon-sprite icon-sprite-share-twitter"></i>
                 </span>
-            </a>
-        </li>
-        <li class="social__item is-hidden">
-            <a class="social__action" href="#">
-                <span class="u-h">Share on Google+</span>
-                <span class="social-icon">
-                    <i class="icon-sprite icon-sprite-share-gplus"></i>
-               </span>
             </a>
         </li>
     </ul>
