Change Twitter share text

--- a/frontend/app/views/fragments/social.scala.html
+++ b/frontend/app/views/fragments/social.scala.html
@@ -20,7 +20,7 @@
             </a>
         </li>
         <li class="social__item">
-            <a class="social__action" href="https://twitter.com/intent/tweet?text=@encodePathSegment("I'm the newest Guardian member " + Config.membershipUrl + "/about @gdnmembership", "utf-8");hashtags=guardianmembership;related=gdnmembership">
+            <a class="social__action" href="https://twitter.com/intent/tweet?text=@encodePathSegment("I've just joined @gdnmembership. Check it out", "utf-8");url=@Config.membershipUrl;related=gdnmembership">
                 <span class="u-h">Share on Twitter</span>
                 <span class="social-icon">
                     <i class="icon-sprite icon-sprite-share-twitter-colour"></i>
