Add new benefit header and tweak pricing

--- a/frontend/app/views/fragments/benefits/priceInfo.scala.html
+++ b/frontend/app/views/fragments/benefits/priceInfo.scala.html
@@ -8,10 +8,10 @@
     } { pricing =>
         <div class="price-info__container-inner">
             <div class="price-info__sub-detail">Save £@pricing.yearlySaving/year</div>
-            <div class="price-info__detail">£@pricing.yearly/year</div>
+            <div class="price-info__detail">£@pricing.yearly<span class="price-info__detail--sm-date">/year</span></div>
         </div>
         <div class="price-info__container-inner price-info__container-inner--last">
-            <div class="price-info__detail">£@pricing.monthly/month</div>
+            <div class="price-info__detail">£@pricing.monthly<span class="price-info__detail--sm-date">/month</span></div>
         </div>
     }
 </div>
